# xcoins

./: .gitignore  README.md  gen_win_exe.bat  meson.build  xcoins.in
XCoins/: application_window.py  callout.py  coins.py  model.py
XCoins/ui/: application_window.ui  custom.css
data/: com.github.wwmm.xcoins.desktop.in  meson.build
po/: POTFILES.in
